# xontrib-fzf-completions

./: .gitignore  README.md  pyproject.toml
xontrib/: fzf-completions.xsh
